--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
    window.$docsify = {
       el: "#app",
       repo: 'https://github.com/HybridsEgo/tricking-docs',
-      loadSidebar: true,
+      loadSidebar: false,
       loadFooter: true,
-      coverpage: true }
+      coverpage: false }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
