--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <script>
    window.$docsify = {
       el: "#app",
-      repo: 'https://github.com/HybridsEgo/tricking-docs',
+      repo: 'https://github.com/HybridsEgo/Halo-Builds',
       loadSidebar: false,
       loadFooter: true,
-      coverpage: false }
+      coverpage: true }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
